testsuite/tests/typecheck/should_fail/tcfail093.stderr

tcfail093.hs:23:10: error: [GHC-39999]
    • No instance for ‘Call (IO Int) h0’ arising from a use of ‘call’
    • In the expression: call primDup
      In an equation for ‘dup’: dup () = call primDup
